# omnirotor_mixed_integer_control_allocation-

./: README.md
gazebo/eeprom/: dx_eeprom_id11  dx_eeprom_id2  dx_eeprom_id4  dx_eeprom_id5  dx_eeprom_id6  dx_eeprom_id7  dx_eeprom_id8  dx_eeprom_id9
gazebo/models/dxsim-one/: model.sdf
gazebo/models/dxsim-two/: model.sdf
gazebo/models/hole/: model.config  model.sdf
gazebo/models/mrsim-omnimorph/: model.config  model.urdf  omnicopter_frame.stl
gazebo/models/mrsim-omnimorph-com/: gen_model.sh  model.urdf  model.urdf.xacro  model_0.urdf.xacro
gazebo/models/mrsim-omnimorph-com/config/: omnimorph_controlboard.ini
gazebo/models/mrsim-omnimorph-com/trash/: model.urdf
gazebo/models/mrsim-omnimorph-free-com/: model.urdf  model_old.urdf.xacro  visualization_stick50cm_xaxis.stl
gazebo/models/mrsim-omnimorph/trash/: modelnot.txt
gazebo/models/mrsim-quadrotor/: model.sdf
gazebo/models/mrsim-rotor/: model.sdf
gazebo/models/mrsim-tilthex/: model.sdf
gazebo/models/mrsim-tiltrotor/: model.sdf
gazebo/models/mrsim-tiltrotor_l/: model.config  model.sdf  model_0.sdf  nut_m5_lock.stl  prop_8inches_reverse.stl
gazebo/models/wall/: model.config  model.sdf
gazebo/worlds/: com.world  free.world  free_com.world
genom3/maneuver-genom3/: Makefile.am  README.adoc  configure.ac  maneuver.gen
genom3/maneuver-genom3/codels/: Makefile.am  maneuver_codels.cc  maneuver_exec_codels.cc  maneuver_plan_codels.cc
genom3/omnimorph-genom3/: Makefile.am  README.adoc  configure.ac  omnimorph-genom3-uninstalled.pc.in  omnimorph-genom3.pc.in  omnimorph.gen
genom3/omnimorph-genom3/codels/: Makefile.am  codels.h  controller.cc  geometry.cc  miqp_solver.cpp  miqp_solver.h  omnimorph_codels.c  omnimorph_main_codels.c  omnimorph_wo_codels.c  test.cpp
genom3/phynt-genom3/: .gitignore  Makefile.am  README.adoc  configure.ac  phynt-genom3-uninstalled.pc.in  phynt-genom3.pc.in  phynt.gen
genom3/phynt-genom3/autoconf/: ag_templates.m4
genom3/phynt-genom3/codels/: Makefile.am  admittance.cc  codels.h  observer.cc  phynt_codels.c  phynt_main_codels.c
matlab/Calibration_imu/: Readme.md  imu_calibration.m  save_to_json.m  settingTheZero.m
matlab/Calibration_imu/launch/: kill_all_pocolibs.sh  launch_imu_calibration.sh
matlab/Calibration_imu/results/: calib_omni.mat  calib_omni1.mat
matlab/omnimorph_sim/: .gitignore  init_proj_com.m  init_proj_real.m  init_proj_sim.m  omnimorph_params.m  omnimorph_params_com.m  solve_miqp_bb.m  solve_miqp_bb_stack_2.m  start_sequence.m  start_sequence_com.m  test_miqp_complex.m  test_miqp_suite.m
matlab/omnimorph_sim/metrics/: pc.m  rmse.m
matlab/omnimorph_sim/plot/: plot_data_sim.m  plot_logs.m  plot_logs_report.m
matlab/omnimorph_sim/sim/: omnimorph_controller_FL.slx  omnimorph_controller_FL.slx.original  omnimorph_controller_FL_23.slx  omnimorph_controller_optim.slx
matlab/omnimorph_sim/wMap_identification/: extract_data.m  extract_flight_data.m  generate_orientations.m  run_motors.m  violin_plot.m  wrenchMap_identification.m
optimization_proj/: README.md  omnirotor_params.m  optimization_s2.mlx  optimization_simulation.mlx  xy_starts.mat
optimization_proj/lib/math-helper/: AllocationMatrixComplete.m  AllocationMatrixNoDrag.m  Ry.m  Rz.m  WMat.m  alignPropellersXY.m  buildPerpBases.m  circ_traj.m  control_loop.m  disk_constraints.m  minJerkPloyTraj.m  nonlcon_singular.m  normals_from_xy.m  obj_fun.m  obj_fun_logvol.m  optimization_loop.m  perturbNormalTangent.m  plotConditionalSlice_fromFmincon_perpPlane.m  quintic_poly_traj.m  sampleTangentPerturbations.m  sigma_at_normal.m  skewMat.m  smooth_profile.m  tangentBasis.m  trackObjectiveOverCoMShift.m  uniform_xy_on_upper_s2.m
optimization_proj/lib/omnimorph-helper/: checkResult.m  myWrenchMapVariableTilt.m  printStruct.m
optimization_proj/plot/: DroneMultiView.m  DroneView.m  DroneViewPlanes.m  plotConditionalSlicePhi.m  plotDroneConfiguration.m  plotFComparisonParity.m  plotPropellerClustersXY.m  plotRotorDisk.m  plotSphereGradientNorm.m  plotSphereGradientRobustness.m  plotTOP5XY.m  plotXYProjection.m  plotXY_allSolutions.m
optimization_proj/res/: All_ResultsLogVol_Complete.mat  All_ResultsLogVol_NoDrag.mat  All_Results_Complete.mat  All_Results_NoDrag.mat  Results_Top01_Complete.mat  Results_Top01_Complete_LogVol.mat  Results_Top01_NoDrag.mat  Results_Top01_NoDrag_LogVol.mat
optimization_proj/slprj/_jitprj/: jitEngineAccessInfo.mat  s3OjYhdASGOf2eXHg6G8AcB.l  s3OjYhdASGOf2eXHg6G8AcB.mat  s46pgJ1jslmKZsGFNvQHGiF.l  s46pgJ1jslmKZsGFNvQHGiF.mat  s51mkpy5wExFeH1s9txsBDE.l  s51mkpy5wExFeH1s9txsBDE.mat  s6pTPrFlOmeBdvtZHdnIfdF.l  s6pTPrFlOmeBdvtZHdnIfdF.mat  sFiEO7XXeW5SoNoZSUPOsMG.l  sFiEO7XXeW5SoNoZSUPOsMG.mat  sIxtiYBWwPkwdNNvghdRjWC.l  sIxtiYBWwPkwdNNvghdRjWC.mat  sMbdOjFzX7iXWXEsz2yZRr.l  sMbdOjFzX7iXWXEsz2yZRr.mat  sNNt2ABFsFvJHmUnIXUlMvC.l  sNNt2ABFsFvJHmUnIXUlMvC.mat  sOA8znMuFuwX78cx38OnLX.l  sOA8znMuFuwX78cx38OnLX.mat  sSGzeMbPgn9lAQC8VVluyjC.l  sSGzeMbPgn9lAQC8VVluyjC.mat  sZ5AO717g7URq1PWcuFFtmC.l  sZ5AO717g7URq1PWcuFFtmC.mat  sem0py4JNmYUmRYdc2RgJiF.l  sem0py4JNmYUmRYdc2RgJiF.mat  shuQ6uSiQqyOpxDkrxtyZB.l  shuQ6uSiQqyOpxDkrxtyZB.mat  shwO1BGxfk1X914wNJ4CtS.l  shwO1BGxfk1X914wNJ4CtS.mat  sjPgG19680oHGh7eYzIh9E.l  sjPgG19680oHGh7eYzIh9E.mat  sklxsVIJ3FFg4tLiZF1D9gC.l  sklxsVIJ3FFg4tLiZF1D9gC.mat  sp66ChblFlKKfeqvVQ6FvfB.l  sp66ChblFlKKfeqvVQ6FvfB.mat  ssAgHno3tEaz3I99won4Jb.l  ssAgHno3tEaz3I99won4Jb.mat
(+102 files in other folders)
